cabal-version:      3.0
name:               quickcheck-plutus-instances
version:            2.1
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Test.QuickCheck.Plutus.Instances
    Test.QuickCheck.Plutus.Modifiers

  build-depends:
    , bytestring            ^>=0.10.12.0
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck            ^>=2.14.2
    , quickcheck-instances  ^>=0.3.25.2
    , text                  ^>=1.2.4.1

  hs-source-dirs:  src
