cabal-version:      3.0
name:               tasty-plutus
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates

library
  import:          lang
  exposed-modules:
    Test.Tasty.Plutus.Context
    Test.Tasty.Plutus.Validator.Unit

  build-depends:
    , base
    , containers         ^>=0.6.2.1
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , tagged             ^>=0.8.6.1
    , tasty              ^>=1.4.1
    , validation         ^>=1.1.1
    , witherable         ^>=0.4.1

  hs-source-dirs:  src
