cabal-version:      3.0
name:               tasty-plutus
version:            9.1
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Test.Tasty.Plutus.Options
    Test.Tasty.Plutus.Script.Property
    Test.Tasty.Plutus.Script.Size
    Test.Tasty.Plutus.Script.Unit
    Test.Tasty.Plutus.TestData
    Test.Tasty.Plutus.TestScript
    Test.Tasty.Plutus.WithScript

  other-modules:
    Test.Tasty.Plutus.Internal.DumpScript
    Test.Tasty.Plutus.Internal.Env
    Test.Tasty.Plutus.Internal.Estimate
    Test.Tasty.Plutus.Internal.Feedback
    Test.Tasty.Plutus.Internal.Options
    Test.Tasty.Plutus.Internal.Run
    Test.Tasty.Plutus.Internal.TestScript
    Test.Tasty.Plutus.Internal.WithScript
    Test.Tasty.Plutus.Options.QQ

  build-depends:
    , base                    ^>=4.14
    , bytestring              ^>=0.10.12.0
    , cardano-api
    , containers              ^>=0.6.2.1
    , filepath                ^>=1.4.2
    , mtl                     ^>=2.2.2
    , plutus-context-builder  ^>=2.0
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-numeric          ^>=5.1
    , plutus-pretty           ^>=3.0
    , plutus-tx
    , plutus-tx-plugin
    , pretty                  ^>=1.1.3.6
    , pretty-show             ^>=1.10
    , QuickCheck              ^>=2.14.2
    , safe                    ^>=0.3.19
    , serialise               ^>=0.2.3.0
    , tagged                  ^>=0.8.6.1
    , tasty                   ^>=1.4.1
    , template-haskell        ^>=2.16.0.0
    , text                    ^>=1.2.4.1
    , vector                  ^>=0.12.3.0

  hs-source-dirs:  src

test-suite properties
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    MintingPolicy
    Validator

  hs-source-dirs: test/Properties
  build-depends:
    , base                         ^>=4.14
    , plutus-context-builder
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , quickcheck-plutus-instances  ^>=2.2
    , tasty                        ^>=1.4.1
    , tasty-plutus
    , tasty-quickcheck             ^>=0.10.1.2

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O1
